syntax = "proto3";
package protocols;
option go_package = "github.com/movsb/taoblog/protocols";

import "google/protobuf/field_mask.proto";

message Comment {
	int64 id = 1;
	int64 parent = 2;
	int64 root = 3;
	int64 post_id = 4;
	string author = 5;
	string email = 6;
	string url = 7;
	string ip = 8;
	int32 date = 9;
	string source_type = 10;
	string source = 11;
	string content = 12;
	repeated Comment children = 13;
	bool is_admin = 14;
	string date_fuzzy = 15;
	string geo_location = 16;
	// 前端用户是否可以编辑此评论？
	// 仅在 list/create 接口中返回。
	bool can_edit = 17;
	// 头像内部临时ID
	int32 avatar = 18;
}

message GetCommentRequest {
	int64 id = 1;
}

message UpdateCommentRequest {
	Comment comment = 1;
	google.protobuf.FieldMask update_mask = 2;
}

message DeleteCommentRequest {
	int32 id = 1;
}

message DeleteCommentResponse {

}

enum ListCommentsMode {
	ListCommentsModeUnspecified = 0;
	ListCommentsModeTree = 1;
	ListCommentsModeFlat = 2;
}

message ListCommentsRequest {
	ListCommentsMode mode = 1;
	// 0 for all posts.
	int64 post_id = 2;
	// defaults to "*".
	repeated string fields = 3;
	// must be > 0.
	int64 limit = 4;
	int64 offset = 5;
	string order_by = 6;
}

message ListCommentsResponse {
	repeated Comment comments = 1;
}

message SetCommentPostIDRequest {
	int64 id = 1;
	int64 post_id = 2;
}

message SetCommentPostIDResponse {

}

message PreviewCommentRequest {
	string markdown = 1;
	// 是否在新窗口中打开链接。
	// 对于正在编辑的评论来说，总是应该这样。
	bool open_links_in_new_tab = 2;
	// 所属文章编号。不是必须的。
	// 但是为了计算图片的大小，建议加上。
	int32 post_id = 3;
}

message PreviewCommentResponse {
	string html = 1;
}
